Source/WebCore/plugins/symbian/PluginViewSymbian.cpp
@@ -102,12 +102,7 @@ void PluginView::updatePluginWidget()
     if (m_windowRect == oldWindowRect && m_clipRect == oldClipRect)
         return;
 
-    // in order to move/resize the plugin window at the same time as the rest of frame
-    // during e.g. scrolling, we set the mask and geometry in the paint() function, but
-    // as paint() isn't called when the plugin window is outside the frame which can
-    // be caused by a scroll, we need to move/resize immediately.
-    if (!m_windowRect.intersects(frameView->frameRect()))
-        setNPWindowIfNeeded();
+    setNPWindowIfNeeded();
 }
 
 void PluginView::setFocus(bool focused)
